Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0 Beta 1, 5.2.0 Beta1
-
None
-
Windows 7 x64
-
qtbase/dev: a2666d33919807ba6170f55f8e74a71ef8392a4d
Description
trying simple application with qt4.8.1 and qt5.1.0 and one QLineEdit i found that placeholder text is not hidden on QLineEdit focused when build against qt5. Its hide only when i start to input
Attachments
Issue Links
- relates to
-
QTBUG-49147 Qt Quick Textfield – remove placeholder text when blinking cursor is active
-
- Closed
-
For Gerrit Dashboard: QTBUG-31669 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72986,8 | QLineEdit: hide placeholder text when h-centered & focused | dev | qt/qtbase | Status: MERGED | +2 | 0 |